@@ -1,83 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/scrollView1"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content" >
-
-	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	    android:id="@+id/itemRoot"
-	    android:layout_width="fill_parent"
-	    android:layout_height="wrap_content"
-	    android:layout_marginLeft="10dip"
-	    android:layout_marginRight="10dip"
-	    android:minWidth="300px"
-	    android:orientation="vertical"
-	    android:paddingLeft="20dip"
-	    android:paddingRight="20dip" >
-	
-	    <CheckBox android:layout_width="wrap_content"
-	        android:layout_height="wrap_content" android:id="@+id/chkVEHICLEDATA_GPS"
-	        android:text="GPS" android:checked="false">
-	    </CheckBox>
-	    <CheckBox android:layout_width="wrap_content"
-	        android:layout_height="wrap_content" android:id="@+id/chkVEHICLEDATA_SPEED"
-	        android:text="Speed" android:checked="false">
-	    </CheckBox>
-	    <CheckBox android:layout_width="wrap_content"
-	        android:layout_height="wrap_content" android:id="@+id/chkVEHICLEDATA_FUELLEVEL"
-	        android:text="Fuel Level" android:checked="false">
-	    </CheckBox>
-	    <CheckBox android:layout_width="wrap_content"
-	        android:layout_height="wrap_content" android:id="@+id/chkVEHICLEDATA_FUELECONOMY"
-	        android:text="Fuel Economy" android:checked="false">
-	    </CheckBox>
-	    <CheckBox android:layout_width="wrap_content"
-	        android:layout_height="wrap_content" android:id="@+id/chkVEHICLEDATA_ENGINERPM"
-	        android:text="Engine RPM" android:checked="false">
-	    </CheckBox>
-	    <CheckBox android:layout_width="wrap_content"
-	        android:layout_height="wrap_content" android:id="@+id/chkVEHICLEDATA_BATTVOLTS"
-	        android:text="Battery Voltage" android:checked="false">
-	    </CheckBox>
-	    <CheckBox android:layout_width="wrap_content"
-	        android:layout_height="wrap_content" android:id="@+id/chkVEHICLEDATA_RAINSENSOR"
-	        android:text="Rain Sensor" android:checked="false">
-	    </CheckBox>
-	    <CheckBox android:layout_width="wrap_content"
-	        android:layout_height="wrap_content" android:id="@+id/chkVEHICLEDATA_ODOMETER"
-	        android:text="Odometer" android:checked="false">
-	    </CheckBox>
-	    <CheckBox android:layout_width="wrap_content"
-	        android:layout_height="wrap_content" android:id="@+id/chkVEHICLEDATA_VIN"
-	        android:text="VIN" android:checked="false">
-	    </CheckBox>
-	    <CheckBox android:layout_width="wrap_content"
-	        android:layout_height="wrap_content" android:id="@+id/chkVEHICLEDATA_EXTERNTEMP"
-	        android:text="External Temp" android:checked="false">
-	    </CheckBox>
-	    <CheckBox android:layout_width="wrap_content"
-	        android:layout_height="wrap_content" android:id="@+id/chkVEHICLEDATA_PRNDLSTATUS"
-	        android:text="PRNDL Status" android:checked="false">
-	    </CheckBox>
-	    <CheckBox android:layout_width="wrap_content"
-	        android:layout_height="wrap_content" android:id="@+id/chkVEHICLEDATA_TIREPRESSURE"
-	        android:text="Tire Pressure" android:checked="false">
-	    </CheckBox>
-	    <CheckBox android:layout_width="wrap_content"
-	        android:layout_height="wrap_content" android:id="@+id/chkVEHICLEDATA_BATTERYPACKVOLTAGE"
-	        android:text="Battery Voltage" android:checked="false">
-	    </CheckBox>
-	    <CheckBox android:layout_width="wrap_content"
-	        android:layout_height="wrap_content" android:id="@+id/chkVEHICLEDATA_BATTERYCURRENT"
-	        android:text="Battery Current" android:checked="false">
-	    </CheckBox>
-	    <CheckBox android:layout_width="wrap_content"
-	        android:layout_height="wrap_content" android:id="@+id/chkVEHICLEDATA_BATTERYTEMPERATURE"
-	        android:text="Battery Temperature" android:checked="false">
-	    </CheckBox>
-	    <CheckBox android:layout_width="wrap_content"
-	        android:layout_height="wrap_content" android:id="@+id/chkVEHICLEDATA_SATESN"
-	        android:text="Satellite ESN" android:checked="false">
-	    </CheckBox>
-	</LinearLayout>
-</ScrollView>
